# unitree_go1_gazebo

./: CMakeLists.txt  LICENSE  README.md  leg_joint_controller.xml  package.xml
.github/workflows/: default.yml
config/: controller.yaml  gz_bridge.yaml
docs/: NOTE.md  NOTES.md  SETUP.md
include/unitree_go1_gazebo/: leg_joint_controller.hpp
launch/: description.launch.py  gazebo.launch.py
rviz/: go1_model.rviz  go1_sim.rviz
src/: leg_joint_controller.cpp
worlds/: empty_minimal.sdf
xacro/: robot.xacro
xacro/go1/: depth_camera.xacro  ft_sensor.xacro  gazebo.xacro  leg.xacro  ros2_control.xacro  transmission.xacro  ultrasound.xacro
